--- a/public/style.css
+++ b/public/style.css
@@ -6,19 +6,18 @@
   box-sizing: border-box;
 }
 body {
-  font-family:'Courier New', Courier, monospace;
-  background-color:#C0E1E6;
-  background-repeat:no-repeat;
-  background-size: cover;
+  background-color:#005861;
 }
+
 .centered {
   position: fixed;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
   text-align: center;
-  background-image: url('/public/images/Background.png'); 
-  background-blend-mode: soft-light;
+  /* background-color: #32C8CC; */
+  background-image: url('/public/images/BKimg.png'); 
+  background-blend-mode: difference;
   background-repeat: no-repeat;
   background-size: cover;
   padding: 11em;
@@ -32,15 +31,18 @@ body {
 }
 
 #welcome{
-color:#E45D03;
-font-size: xx-large;
+color:#CF9385;
+font-size: 5rem;
 font-family: 'Courier New', Courier, monospace;
 font-weight: bolder;
+border-style: double;
+background-color: #E4FCEF;
+padding: 2rem;
+border-radius: 300em;
 }
 
 ul {
   list-style: none;
-  /* background-color:#867FB5; */
   color:#E45D03 ;
   font-family: 'Courier New', Courier, monospace;
 }
@@ -51,14 +53,14 @@ display: flex;
 flex-direction: column;
 align-items: center;
 flex-wrap: wrap;
-font-family: 'Courier New', Courier, monospace;
+font-family:'Courier New', Courier, monospace;
 }
 
 #start-quiz-button {
   padding: 1em;
   border-radius: 300px;
-  background-color:#C0E1E6;
-  font-family: 'Courier New', Courier, monospace;
+  background-color:#FCFEF7;
+  font-family:'Courier New', Courier, monospace;
   font-size: medium;
   font-weight: bold;
 }
@@ -74,23 +76,29 @@ font-family: 'Courier New', Courier, monospace;
   font-size: 50px;
   height: 70px;
   width: 250px;
-  color: #E45D03;
-  font-family: 'Courier New', Courier, monospace;
+  color: #CF9385;
+  font-family:'Courier New', Courier, monospace;
   margin: 50px;
 
 }
 
 .correct{
-  background-color:#40785F;
+  background-color:#15c486;
+  color: #FCFEF7;
 }
 
 .wrong{
-  background-color:#E74922;
+  background-color:#ea2a2a;
+  color: #FCFEF7;
 }
 
 h1{
-  font-family: 'Courier New', Courier, monospace;
-  color: #15c486;
+  font-family:'Courier New', Courier, monospace;
+  color: #CF9385;
+  margin: 2rem;
+  background-color: #FCFEF7;
+  padding: 1em;
+  border-radius: 300px;
   margin: 2rem;
 }
 
@@ -98,8 +106,8 @@ h1{
   width: 300px;
   padding: 1em;
   border-radius: 500px;
-  font-family: 'Courier New', Courier, monospace;
-  font-size:small;
+  font-family:'Courier New', Courier, monospace;
+  font-size:medium;
   font-weight: bold;
 }
 
@@ -107,8 +115,8 @@ h1{
   padding: 1em;
   border-radius: 300px;
   margin: 2rem;
-  font-family: 'Courier New', Courier, monospace;
+  font-family:'Courier New', Courier, monospace;
   font-size: medium;
   font-weight: bold;
-  background-color:#C0E1E6;
+  background-color:#FCFEF7;
 }
